--- a/proj.win32/Adventure.vcxproj
+++ b/proj.win32/Adventure.vcxproj
@@ -55,7 +55,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\Classes;$(ProjectDir)..\..\library\scripting\lua\cocos2dx_support;$(ProjectDir)..\..\library\scripting\lua\lua;$(ProjectDir)..\..\library\scripting\lua\tolua;$(ProjectDir)..\..\library\scripting\lua\src;$(ProjectDir)..\..\library\cocos2dx;$(ProjectDir)..\..\library\cocos2dx\include;$(ProjectDir)..\..\library\cocos2dx\kazmath\include;$(ProjectDir)..\..\library\cocos2dx\platform\win32;$(ProjectDir)..\..\library\cocos2dx\platform\third_party\win32\OGLES;$(ProjectDir)..\..\library\CocosDenshion\include;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\Classes;$(ProjectDir)..\..\library\scripting\lua\cocos2dx_support;$(ProjectDir)..\..\library\scripting\lua\lua;$(ProjectDir)..\..\library\scripting\lua\tolua;$(ProjectDir)..\..\library\scripting\lua\src;$(ProjectDir)..\..\library\cocos2dx;$(ProjectDir)..\..\library\cocos2dx\include;$(ProjectDir)..\..\library\cocos2dx\kazmath\include;$(ProjectDir)..\..\library\cocos2dx\platform\win32;$(ProjectDir)..\..\library\cocos2dx\platform\third_party\win32\OGLES;$(ProjectDir)..\..\library\CocosDenshion\include;$(ProjectDir)..\..\library\extensions;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;COCOS2D_DEBUG=1;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -110,22 +110,37 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
+    <ClCompile Include="..\Classes\CCButton.cpp" />
+    <ClCompile Include="..\Classes\CCJoypad.cpp" />
+    <ClCompile Include="..\Classes\CCSpiritedJoystick.cpp" />
+    <ClCompile Include="..\Classes\CCSpriteColor.cpp" />
+    <ClCompile Include="..\Classes\ExitDialog.cpp" />
+    <ClCompile Include="..\Classes\HelpScene.cpp" />
+    <ClCompile Include="..\Classes\MenuItemLabelColor.cpp" />
+    <ClCompile Include="..\Classes\MenuScene.cpp" />
+    <ClCompile Include="..\Classes\SplashScene.cpp" />
+    <ClCompile Include="..\Classes\TestScene.cpp" />
+    <ClCompile Include="..\Classes\Touch.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\AppMacros.h" />
+    <ClInclude Include="..\Classes\CCButton.h" />
+    <ClInclude Include="..\Classes\CCDebug.h" />
+    <ClInclude Include="..\Classes\CCJoypad.h" />
+    <ClInclude Include="..\Classes\CCSpiritedJoystick.h" />
+    <ClInclude Include="..\Classes\CCSpriteColor.h" />
+    <ClInclude Include="..\Classes\ExitDialog.h" />
+    <ClInclude Include="..\Classes\HelpScene.h" />
+    <ClInclude Include="..\Classes\MenuItemLabelColor.h" />
+    <ClInclude Include="..\Classes\MenuScene.h" />
+    <ClInclude Include="..\Classes\SplashScene.h" />
+    <ClInclude Include="..\Classes\TestScene.h" />
+    <ClInclude Include="..\Classes\Touch.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\..\..\cocos2dx\proj.win32\cocos2d.vcxproj">
-      <Project>{98a51ba8-fc3a-415b-ac8f-8c7bd464e93e}</Project>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
-    <ProjectReference Include="..\..\..\CocosDenshion\proj.win32\CocosDenshion.vcxproj">
-      <Project>{f8edd7fa-9a51-4e80-baeb-860825d2eac6}</Project>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-    </ProjectReference>
     <ProjectReference Include="..\..\library\cocos2dx\proj.win32\cocos2d.vcxproj">
       <Project>{98a51ba8-fc3a-415b-ac8f-8c7bd464e93e}</Project>
       <Private>true</Private>
