更新Windows环境要忽略的文件

--- a/.gitignore
+++ b/.gitignore
@@ -1,73 +1,6 @@
 
 proj.mac/.DS_Store
-proj.win32/Debug.win32/Adventure.exe
-proj.win32/Debug.win32/Adventure.exe.embed.manifest
-proj.win32/Debug.win32/Adventure.exe.embed.manifest.res
-proj.win32/Debug.win32/Adventure.exe.intermediate.manifest
-proj.win32/Debug.win32/Adventure.ilk
-proj.win32/Debug.win32/Adventure.lastbuildstate
-proj.win32/Debug.win32/Adventure.log
-proj.win32/Debug.win32/Adventure.pdb
-proj.win32/Debug.win32/Adventure.write.1.tlog
-proj.win32/Debug.win32/Adventure_manifest.rc
-proj.win32/Debug.win32/AppDelegate.obj
-proj.win32/Debug.win32/CCButton.obj
-proj.win32/Debug.win32/CCJoypad.obj
-proj.win32/Debug.win32/CCSpiritedJoystick.obj
-proj.win32/Debug.win32/CCSpriteColor.obj
-proj.win32/Debug.win32/CL.read.1.tlog
-proj.win32/Debug.win32/CL.write.1.tlog
-proj.win32/Debug.win32/ExitDialog.obj
-proj.win32/Debug.win32/HelpScene.obj
-proj.win32/Debug.win32/MenuItemLabelColor.obj
-proj.win32/Debug.win32/MenuScene.obj
-proj.win32/Debug.win32/SplashScene.obj
-proj.win32/Debug.win32/TestScene.obj
-proj.win32/Debug.win32/Touch.obj
-proj.win32/Debug.win32/cl.command.1.tlog
-proj.win32/Debug.win32/glew32.dll
-proj.win32/Debug.win32/glew32.lib
-proj.win32/Debug.win32/iconv.dll
-proj.win32/Debug.win32/libCocosDenshion.dll
-proj.win32/Debug.win32/libCocosDenshion.exp
-proj.win32/Debug.win32/libCocosDenshion.lib
-proj.win32/Debug.win32/libCocosDenshion.pdb
-proj.win32/Debug.win32/libExtensions.lib
-proj.win32/Debug.win32/libcocos2d.dll
-proj.win32/Debug.win32/libcocos2d.exp
-proj.win32/Debug.win32/libcocos2d.lib
-proj.win32/Debug.win32/libcocos2d.pdb
-proj.win32/Debug.win32/libcurl.dll
-proj.win32/Debug.win32/libcurl_imp.lib
-proj.win32/Debug.win32/libiconv.lib
-proj.win32/Debug.win32/libjpeg.lib
-proj.win32/Debug.win32/libpng.lib
-proj.win32/Debug.win32/libtiff.dll
-proj.win32/Debug.win32/libtiff.lib
-proj.win32/Debug.win32/libxml2.dll
-proj.win32/Debug.win32/libxml2.lib
-proj.win32/Debug.win32/libzlib.lib
-proj.win32/Debug.win32/link-cvtres.read.1.tlog
-proj.win32/Debug.win32/link-cvtres.write.1.tlog
-proj.win32/Debug.win32/link.1992-cvtres.read.1.tlog
-proj.win32/Debug.win32/link.1992-cvtres.write.1.tlog
-proj.win32/Debug.win32/link.1992.read.1.tlog
-proj.win32/Debug.win32/link.1992.write.1.tlog
-proj.win32/Debug.win32/link.command.1.tlog
-proj.win32/Debug.win32/link.read.1.tlog
-proj.win32/Debug.win32/link.write.1.tlog
-proj.win32/Debug.win32/main.obj
-proj.win32/Debug.win32/mt.command.1.tlog
-proj.win32/Debug.win32/mt.read.1.tlog
-proj.win32/Debug.win32/mt.write.1.tlog
-proj.win32/Debug.win32/pthreadVCE2.dll
-proj.win32/Debug.win32/pthreadVCE2.lib
-proj.win32/Debug.win32/rc.command.1.tlog
-proj.win32/Debug.win32/rc.read.1.tlog
-proj.win32/Debug.win32/rc.write.1.tlog
-proj.win32/Debug.win32/vc100.idb
-proj.win32/Debug.win32/vc100.pdb
-proj.win32/Debug.win32/zlib1.dll
+proj.win32/Debug.win32/*
 proj.win32/Adventure.opensdf
 proj.win32/Adventure.sdf
 
