--- a/proj.win32/Military Confrontation.vcxproj
+++ b/proj.win32/Military Confrontation.vcxproj
@@ -14,6 +14,7 @@
     <ProjectGuid>{B8BF9E81-35FD-4582-BA1C-B85FA365BABB}</ProjectGuid>
     <RootNamespace>HelloCppwin32</RootNamespace>
     <Keyword>Win32Proj</Keyword>
+    <ProjectName>Military Confrontation</ProjectName>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'" Label="Configuration">
@@ -55,7 +56,7 @@
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
       <Optimization>Disabled</Optimization>
-      <AdditionalIncludeDirectories>$(ProjectDir)..\Classes;$(ProjectDir)..\..\library\scripting\lua\cocos2dx_support;$(ProjectDir)..\..\library\scripting\lua\lua;$(ProjectDir)..\..\library\scripting\lua\tolua;$(ProjectDir)..\..\library\scripting\lua\src;$(ProjectDir)..\..\library\cocos2dx;$(ProjectDir)..\..\library\cocos2dx\include;$(ProjectDir)..\..\library\cocos2dx\kazmath\include;$(ProjectDir)..\..\library\cocos2dx\platform\win32;$(ProjectDir)..\..\library\cocos2dx\platform\third_party\win32\OGLES;$(ProjectDir)..\..\library\CocosDenshion\include;$(ProjectDir)..\..\library\extensions;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>$(ProjectDir)..\Classes;$(ProjectDir)..\Classes\JSON\include;$(ProjectDir)..\Classes\JSON\include\JsonBox;$(ProjectDir)..\..\library\scripting\lua\cocos2dx_support;$(ProjectDir)..\..\library\scripting\lua\lua;$(ProjectDir)..\..\library\scripting\lua\tolua;$(ProjectDir)..\..\library\scripting\lua\src;$(ProjectDir)..\..\library\cocos2dx;$(ProjectDir)..\..\library\cocos2dx\include;$(ProjectDir)..\..\library\cocos2dx\kazmath\include;$(ProjectDir)..\..\library\cocos2dx\platform\win32;$(ProjectDir)..\..\library\cocos2dx\platform\third_party\win32\OGLES;$(ProjectDir)..\..\library\CocosDenshion\include;$(ProjectDir)..\..\library\extensions;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <PreprocessorDefinitions>WIN32;_DEBUG;_WINDOWS;COCOS2D_DEBUG=1;_CRT_SECURE_NO_WARNINGS;_SCL_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <MinimalRebuild>true</MinimalRebuild>
       <BasicRuntimeChecks>EnableFastChecks</BasicRuntimeChecks>
@@ -109,35 +110,81 @@
     </PostBuildEvent>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="..\..\library\cocos2dx\platform\win32\MCKeyboardDispatcher.cpp" />
     <ClCompile Include="..\Classes\AppDelegate.cpp" />
-    <ClCompile Include="..\Classes\CCButton.cpp" />
-    <ClCompile Include="..\Classes\CCJoypad.cpp" />
-    <ClCompile Include="..\Classes\CCSpiritedJoystick.cpp" />
-    <ClCompile Include="..\Classes\CCSpriteColor.cpp" />
-    <ClCompile Include="..\Classes\ExitDialog.cpp" />
-    <ClCompile Include="..\Classes\HelpScene.cpp" />
-    <ClCompile Include="..\Classes\MenuItemLabelColor.cpp" />
-    <ClCompile Include="..\Classes\MenuScene.cpp" />
-    <ClCompile Include="..\Classes\SplashScene.cpp" />
-    <ClCompile Include="..\Classes\TestScene.cpp" />
-    <ClCompile Include="..\Classes\Touch.cpp" />
+    <ClCompile Include="..\Classes\JSON\src\Array.cpp" />
+    <ClCompile Include="..\Classes\JSON\src\Convert.cpp" />
+    <ClCompile Include="..\Classes\JSON\src\Escaper.cpp" />
+    <ClCompile Include="..\Classes\JSON\src\IndentCanceller.cpp" />
+    <ClCompile Include="..\Classes\JSON\src\Indenter.cpp" />
+    <ClCompile Include="..\Classes\JSON\src\Object.cpp" />
+    <ClCompile Include="..\Classes\JSON\src\SolidusEscaper.cpp" />
+    <ClCompile Include="..\Classes\JSON\src\Value.cpp" />
+    <ClCompile Include="..\Classes\MCBattle.cpp" />
+    <ClCompile Include="..\Classes\MCControllerDelegate.cpp" />
+    <ClCompile Include="..\Classes\MCControllerLayer.cpp" />
+    <ClCompile Include="..\Classes\MCDice.cpp" />
+    <ClCompile Include="..\Classes\MCDungeonMaster.cpp" />
+    <ClCompile Include="..\Classes\MCGameScene.cpp" />
+    <ClCompile Include="..\Classes\MCGeometry.cpp" />
+    <ClCompile Include="..\Classes\MCItem.cpp" />
+    <ClCompile Include="..\Classes\MCJoypad.cpp" />
+    <ClCompile Include="..\Classes\MCJoystick.cpp" />
+    <ClCompile Include="..\Classes\MCJSONModifier.cpp" />
+    <ClCompile Include="..\Classes\MCKeyboard.cpp" />
+    <ClCompile Include="..\Classes\MCMainMenuScene.cpp" />
+    <ClCompile Include="..\Classes\MCMutiplayerBattleImpl.cpp" />
+    <ClCompile Include="..\Classes\MCNormalBattleImpl.cpp" />
+    <ClCompile Include="..\Classes\MCPointExtension.cpp" />
+    <ClCompile Include="..\Classes\MCRole.cpp" />
+    <ClCompile Include="..\Classes\MCSceneList.cpp" />
+    <ClCompile Include="..\Classes\MCScenePackage.cpp" />
+    <ClCompile Include="..\Classes\MCScript.cpp" />
+    <ClCompile Include="..\Classes\MCSplashScene.cpp" />
+    <ClCompile Include="..\Classes\MCTestControllerScene.cpp" />
+    <ClCompile Include="..\Classes\MCTestScene.cpp" />
     <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\..\library\cocos2dx\platform\win32\MCKeyboardDispatcher.h" />
     <ClInclude Include="..\Classes\AppDelegate.h" />
     <ClInclude Include="..\Classes\AppMacros.h" />
-    <ClInclude Include="..\Classes\CCButton.h" />
-    <ClInclude Include="..\Classes\CCDebug.h" />
-    <ClInclude Include="..\Classes\CCJoypad.h" />
-    <ClInclude Include="..\Classes\CCSpiritedJoystick.h" />
-    <ClInclude Include="..\Classes\CCSpriteColor.h" />
-    <ClInclude Include="..\Classes\ExitDialog.h" />
-    <ClInclude Include="..\Classes\HelpScene.h" />
-    <ClInclude Include="..\Classes\MenuItemLabelColor.h" />
-    <ClInclude Include="..\Classes\MenuScene.h" />
-    <ClInclude Include="..\Classes\SplashScene.h" />
-    <ClInclude Include="..\Classes\TestScene.h" />
-    <ClInclude Include="..\Classes\Touch.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox\Array.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox\Convert.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox\Escaper.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox\Grammar.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox\IndentCanceller.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox\Indenter.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox\Object.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox\OutputFilter.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox\SolidusEscaper.h" />
+    <ClInclude Include="..\Classes\JSON\include\JsonBox\Value.h" />
+    <ClInclude Include="..\Classes\MCBattle.h" />
+    <ClInclude Include="..\Classes\MCControllerDelegate.h" />
+    <ClInclude Include="..\Classes\MCControllerLayer.h" />
+    <ClInclude Include="..\Classes\MCDice.h" />
+    <ClInclude Include="..\Classes\MCDungeonMaster.h" />
+    <ClInclude Include="..\Classes\MCGameScene.h" />
+    <ClInclude Include="..\Classes\MCGeometry.h" />
+    <ClInclude Include="..\Classes\MCItem.h" />
+    <ClInclude Include="..\Classes\MCJoypad.h" />
+    <ClInclude Include="..\Classes\MCJoystick.h" />
+    <ClInclude Include="..\Classes\MCJSONModifier.h" />
+    <ClInclude Include="..\Classes\MCKeyboard.h" />
+    <ClInclude Include="..\Classes\MCMainMenuScene.h" />
+    <ClInclude Include="..\Classes\MCMutiplayerBattleImpl.h" />
+    <ClInclude Include="..\Classes\MCNormalBattleImpl.h" />
+    <ClInclude Include="..\Classes\MCObject.h" />
+    <ClInclude Include="..\Classes\MCPointExtension.h" />
+    <ClInclude Include="..\Classes\MCRole.h" />
+    <ClInclude Include="..\Classes\MCSceneList.h" />
+    <ClInclude Include="..\Classes\MCScenePackage.h" />
+    <ClInclude Include="..\Classes\MCScript.h" />
+    <ClInclude Include="..\Classes\MCSplashScene.h" />
+    <ClInclude Include="..\Classes\MCTestControllerScene.h" />
+    <ClInclude Include="..\Classes\MCTestScene.h" />
+    <ClInclude Include="..\Classes\MCType.h" />
     <ClInclude Include="main.h" />
   </ItemGroup>
   <ItemGroup>
@@ -151,14 +198,6 @@
     </ProjectReference>
     <ProjectReference Include="..\..\library\CocosDenshion\proj.win32\CocosDenshion.vcxproj">
       <Project>{f8edd7fa-9a51-4e80-baeb-860825d2eac6}</Project>
-      <Private>true</Private>
-      <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
-      <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
-      <LinkLibraryDependencies>true</LinkLibraryDependencies>
-      <UseLibraryDependencyInputs>false</UseLibraryDependencyInputs>
-    </ProjectReference>
-    <ProjectReference Include="..\..\library\extensions\proj.win32\libExtensions.vcxproj">
-      <Project>{21b2c324-891f-48ea-ad1a-5ae13de12e28}</Project>
       <Private>true</Private>
       <ReferenceOutputAssembly>false</ReferenceOutputAssembly>
       <CopyLocalSatelliteAssemblies>false</CopyLocalSatelliteAssemblies>
